# IdeaBox_frontend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI.yml  lining_and_type_checking.yml
src/: idea.py  idea_box_app.py  main.py  pages.py
src/assets/: manifest.json
src/modules/: idea_box_app.py
src/views/: index.py
